--- a/bf-react-next-intro/af-lists/src-old/package.json
+++ b/bf-react-next-intro/af-lists/src-old/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components-example",
+  "name": "components-lists-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
