--- a/bu-next-paging/space-end-3/jsconfig.json
+++ b/bu-next-paging/space-end-3/jsconfig.json
@@ -5,7 +5,7 @@
         "@components/*": ["components/*"],
         "@layouts/*": ["layouts/*"],
         "@styles/*": ["styles/*"],
-        "@utils/*": ["utils/*"],
+        "@api/*": ["api/*"],
       }
     }
   }
