--- a/bf-react-next-intro/ac-components-intro/src-3/package.json
+++ b/bf-react-next-intro/ac-components-intro/src-3/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "src",
+  "name": "src-3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^5.18.0",
-    "@next/font": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@mui/material": "^7.3.2",
+    "next": "15.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   }
 }
