--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"cSpell.words": [
 		"bgcolor",
+		"Brightspace",
+		"Mouris",
 		"reactjs"
 	],
 	"cSpell.ignoreWords": ["DMIT", "Moodle", "labelledby"]
