--- a/bc-vanilla-javascript-review/dw-express-server-FOODS/frontend/package.json
+++ b/bc-vanilla-javascript-review/dw-express-server-FOODS/frontend/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "json-server-demo",
+  "name": "express-server-backend-parcel-frontend",
   "version": "1.0.0",
-  "description": "Search and saving of albums",
+  "description": "Search and saving foods",
   "source": "index.html",
   "type": "module",
   "scripts": {
-    "json-start": "json-server --watch data/foods.json --port 5000",
     "parcel-start": "parcel serve",
     "build": "parcel build"
   },
@@ -17,7 +16,6 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
-    "json-server": "^0.17.3",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   }
